1. 支持从右到左布局

--- a/app/src/main/res/layout/act_splash2.xml
+++ b/app/src/main/res/layout/act_splash2.xml
@@ -47,15 +47,15 @@
                 android:id="@+id/ad_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/dp_8"
-                android:layout_marginRight="@dimen/dp_8"
+                android:layout_marginStart="@dimen/dp_8"
+                android:layout_marginEnd="@dimen/dp_8"
                 android:layout_weight="1" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
-                android:layout_marginLeft="@dimen/dp_8"
-                android:layout_marginRight="@dimen/dp_8"
+                android:layout_marginStart="@dimen/dp_8"
+                android:layout_marginEnd="@dimen/dp_8"
                 android:layout_weight="0"
                 android:gravity="center"
                 android:text="@string/advertisement"
@@ -75,9 +75,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/splash_app_bg">
 
@@ -92,10 +92,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
-                android:layout_toLeftOf="@+id/right_arrow"
-                android:layout_toRightOf="@+id/app_icon"
+                android:layout_toStartOf="@+id/right_arrow"
+                android:layout_toEndOf="@+id/app_icon"
                 android:text="@string/continue_to_app"
                 android:textColor="@android:color/darker_gray" />
 
@@ -103,10 +103,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginBottom="8dp"
-                android:layout_toLeftOf="@+id/right_arrow"
-                android:layout_toRightOf="@+id/app_icon"
+                android:layout_toStartOf="@+id/right_arrow"
+                android:layout_toEndOf="@+id/app_icon"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/app_name"
@@ -117,9 +117,9 @@
                 android:id="@+id/right_arrow"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:src="@drawable/next" />
