--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="right|center_vertical"
-                        android:layout_marginLeft="2dp"
+                        android:layout_marginStart="2dp"
                         android:layout_weight="1"
                         android:drawablePadding="0dp" />
                 </LinearLayout>
@@ -143,7 +143,7 @@
                 android:id="@+id/interstitial"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="2dp"
+                android:layout_marginEnd="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/interstitial_test"
@@ -153,7 +153,7 @@
                 android:id="@+id/splash"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/splash_test"
@@ -163,7 +163,7 @@
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="2dp"
+                android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/banner_test"
@@ -173,7 +173,7 @@
                 android:id="@+id/reward_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="2dp"
+                android:layout_marginEnd="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/reward_test"
