--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -14,9 +14,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/splash_app_bg">
 
@@ -32,11 +32,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
-                android:layout_toLeftOf="@+id/right_arrow"
                 android:layout_toStartOf="@+id/right_arrow"
-                android:layout_toRightOf="@+id/app_icon"
                 android:layout_toEndOf="@+id/app_icon"
                 android:text="@string/continue_to_app"
                 android:textColor="@android:color/darker_gray" />
@@ -45,11 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginBottom="8dp"
-                android:layout_toLeftOf="@+id/right_arrow"
                 android:layout_toStartOf="@+id/right_arrow"
-                android:layout_toRightOf="@+id/app_icon"
                 android:layout_toEndOf="@+id/app_icon"
                 android:ellipsize="end"
                 android:gravity="start|center_vertical"
@@ -62,10 +58,8 @@
                 android:id="@+id/right_arrow"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_marginRight="8dp"
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
@@ -124,8 +118,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/dp_8"
-                android:paddingRight="@dimen/dp_8" />
+                android:paddingStart="@dimen/dp_8"
+                android:paddingEnd="@dimen/dp_8" />
         </LinearLayout>
     </FrameLayout>
 </LinearLayout>
