--- a/app/src/main/res/values/ad_styles.xml
+++ b/app/src/main/res/values/ad_styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="RabButtonStyle">
-        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_alignParentEnd">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
@@ -11,7 +11,7 @@
     </style>
 
     <style name="RabButtonLargeStyle">
-        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_alignParentEnd">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
