--- a/app/src/main/res/layout/ad_common_native_card_medium.xml
+++ b/app/src/main/res/layout/ad_common_native_card_medium.xml
@@ -96,7 +96,7 @@
                             android:layout_toStartOf="@+id/common_sponsored_label"
                             android:layout_weight="1"
                             android:ellipsize="marquee"
-                            android:gravity="left|top"
+                            android:gravity="start|top"
                             android:singleLine="true"
                             android:text="Charge Master"
                             android:textColor="@color/black"
@@ -107,7 +107,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="marquee"
-                            android:gravity="left|top"
+                            android:gravity="start|top"
                             android:singleLine="true"
                             android:textColor="@color/ad_text_sub"
                             android:textSize="@dimen/sp_12"
@@ -123,7 +123,7 @@
                     android:layout_marginStart="@dimen/dp_16"
                     android:layout_marginEnd="@dimen/dp_16"
                     android:ellipsize="marquee"
-                    android:gravity="left|center_vertical"
+                    android:gravity="start|center_vertical"
                     android:maxLines="2"
                     android:textColor="@color/ad_text_sub"
                     android:textSize="@dimen/sp_14" />
