--- a/app/src/main/res/layout/ad_common_native_card_small.xml
+++ b/app/src/main/res/layout/ad_common_native_card_small.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_toStartOf="@+id/common_sponsored_label"
                     android:ellipsize="marquee"
-                    android:gravity="left|top"
+                    android:gravity="start|top"
                     android:singleLine="true"
                     android:text="Charge Master"
                     android:textColor="@color/black"
@@ -71,7 +71,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:ellipsize="marquee"
-                    android:gravity="left|top"
+                    android:gravity="start|top"
                     android:singleLine="true"
                     android:textColor="@color/ad_text_sub"
                     android:textSize="@dimen/sp_12"
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_4"
                     android:ellipsize="marquee"
-                    android:gravity="left|center_vertical"
+                    android:gravity="start|center_vertical"
                     android:singleLine="true"
                     android:textColor="@color/ad_text_sub"
                     android:textSize="@dimen/sp_12" />
@@ -91,7 +91,7 @@
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:layout_marginTop="@dimen/dp_6"
                     android:layout_marginBottom="@dimen/dp_4">
 
@@ -126,7 +126,7 @@
             android:id="@+id/common_ad_choices_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:padding="4dp" />
     </FrameLayout>
 </FrameLayout>
