--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -260,6 +260,13 @@
             android:onClick="onClick"
             android:text="复合广告展示" />
 
+        <Button
+            android:id="@+id/native_interstitial"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_48"
+            android:onClick="onClick"
+            android:text="原生插屏展示" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
