--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,11 @@
         <attr name="coverColor" format="color" />
     </declare-styleable>
 
-    <style name="AppTheme" parent="android:Theme.DeviceDefault.Light.NoActionBar">
+    <style name="AppTheme" parent="android:Theme.DeviceDefault.NoActionBar">
         <!--        <item name="android:windowFullscreen">true</item>-->
         <!--        <item name="android:statusBarColor">@color/white</item>-->
     </style>
+
     <style name="MainActivity_Theme" parent="android:Theme.DeviceDefault.Light">
         <!--        <item name="android:windowFullscreen">true</item>-->
         <!--        <item name="android:statusBarColor">@color/white</item>-->
