--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -50,7 +50,7 @@
                 android:ellipsize="end"
                 android:gravity="start|center_vertical"
                 android:maxLines="1"
-                android:text="@string/app_name"
+                android:text="@string/app_name_label"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
