--- a/app/src/main/res/layout/act_splash2.xml
+++ b/app/src/main/res/layout/act_splash2.xml
@@ -109,7 +109,7 @@
                 android:layout_toEndOf="@+id/app_icon"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="@string/app_name"
+                android:text="@string/app_name_label"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
