--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="24dp"
             android:gravity="center"
-            android:text="@string/app_name"
+            android:text="@string/app_name_label"
             android:textColor="@color/black" />
 
         <LinearLayout
