--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -288,7 +288,9 @@
                     android:id="@+id/native_banner_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center" />
+                    android:background="@color/white"
+                    android:gravity="center"
+                    android:padding="4dp" />
             </LinearLayout>
 
         </LinearLayout>
