--- a/app/src/main/res/layout/ad_common_native_card_large.xml
+++ b/app/src/main/res/layout/ad_common_native_card_large.xml
@@ -129,7 +129,7 @@
             android:id="@+id/common_action_btn"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/rab_colorBtnBlue"
+            android:background="@color/rabActionBtnColor"
             android:elevation="4dp"
             android:gravity="center"
             android:text="Learn More"
