--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -321,6 +321,13 @@
                 android:onClick="onClick"
                 android:text="原生插屏展示" />
 
+            <Button
+                android:id="@+id/show_spread_list"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_48"
+                android:onClick="onClick"
+                android:text="展示广告推广" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
